--- a/gms.web/Views/Shared/_Sidebar.cshtml
+++ b/gms.web/Views/Shared/_Sidebar.cshtml
@@ -43,7 +43,7 @@
 						<!--begin:Menu item-->
 						<div class="menu-item" side-menu-item="true">
 							<!--begin:Menu link-->
-							<a class="menu-link" href="@Url.Action("AddNewMembership", "Membership")">
+							<a class="menu-link" asp-controller="Membership" asp-action="AddNewMembership">
 								<span class="menu-bullet">
 									<span class="bullet bullet-dot"></span>
 								</span>
@@ -55,7 +55,7 @@
 						<!--begin:Menu item-->
 						<div class="menu-item" side-menu-item="true">
 							<!--begin:Menu link-->
-							<a class="menu-link" href="@Url.Action("MembershipsList", "Membership")">
+							<a class="menu-link" asp-controller="Membership" asp-action="MembershipsList">
 								<span class="menu-bullet">
 									<span class="bullet bullet-dot"></span>
 								</span>
