--- a/gms.web/Views/Membership/AddNewMembership.cshtml
+++ b/gms.web/Views/Membership/AddNewMembership.cshtml
@@ -1,5 +1,5 @@
-﻿@using gms.common.ViewModels.Membership
-@model MembershipVM
+﻿@using gms.common.Models.MembershipCat
+@model CreateMembershipDTO
 @{
 	ViewData["Title"] = localizer["add_new_membership"];
 	bool IsRTL = CultureInfo.CurrentCulture.Name.StartsWith("ar");
@@ -179,7 +179,7 @@
 							<!--begin::Input group-->
 							<div class="fv-row">
 								<label class="form-label ms-2">@localizer["select_classes"]</label>
-								<input class="form-control d-flex align-items-center" placeholder="@localizer["search_by_class_name"]" asp-for="@Model.SelectedClasses" />
+								<input class="form-control d-flex align-items-center" placeholder="@localizer["search_by_class_name"]" name="SelectedClasses" />
 							</div>
 							<!--end::Input group-->
 						</div>
@@ -241,5 +241,5 @@
 <!--end::Content wrapper-->
 
 @section Scripts {
-	<script type="module" src="~/assets/js/customJs/AddNewMembership.js" asp-append-version="true"></script>
+	<script type="module" src="~/assets/js/customJs/Membership/AddNewMembership.js" asp-append-version="true"></script>
 }
