--- a/gms.web/Views/Shared/_Sidebar.cshtml
+++ b/gms.web/Views/Shared/_Sidebar.cshtml
@@ -55,7 +55,7 @@
 						<!--begin:Menu item-->
 						<div class="menu-item" side-menu-item="true">
 							<!--begin:Menu link-->
-							<a class="menu-link" asp-controller="Membership" asp-action="MembershipsList">
+							<a class="menu-link" asp-controller="Membership" asp-action="Index">
 								<span class="menu-bullet">
 									<span class="bullet bullet-dot"></span>
 								</span>
