--- a/gms.web/Views/Shared/_Header.cshtml
+++ b/gms.web/Views/Shared/_Header.cshtml
@@ -1,6 +1,6 @@
-﻿@{
+﻿@model GymUserDTO
+@{
     bool IsRTL = CultureInfo.CurrentCulture.Name.StartsWith("ar");
-
 }
 
 <div id="kt_app_header" class="app-header d-flex flex-column flex-stack">
@@ -178,11 +178,10 @@
                             <!--begin::Username-->
                             <div class="d-flex flex-column">
                                 <div class="fw-bold d-flex align-items-center fs-5">
-                                    Max Smith
+                                    @Model.FirstName
                                     <span class="badge badge-light-success fw-bold fs-8 px-2 py-1 ms-2">Pro</span>
                                 </div>
-                                <a href="#"
-                                   class="fw-semibold text-muted text-hover-primary fs-7">max@kt.com</a>
+                                <a href="#" class="fw-semibold text-muted text-hover-primary fs-7">@Model.Email</a>
                             </div>
                             <!--end::Username-->
                         </div>
