--- a/gms.web/Views/Home/Index.cshtml
+++ b/gms.web/Views/Home/Index.cshtml
@@ -1,9 +1,5 @@
-﻿﻿@using Microsoft.AspNetCore.Localization;
-@using Microsoft.AspNetCore.Mvc.Localization;
-@using gms.data.Models.Identity
-@inject IViewLocalizer localizer;
+﻿@using gms.data.Models.Identity
 @model GymUserEntity
-
 @{
 	ViewData["Title"] = "Dashboard";
 	var test = Model;
