--- a/gms.web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/gms.web/Areas/Identity/Pages/Account/Login.cshtml
@@ -12,10 +12,10 @@
 <html @(IsRTL ? "direction=rtl dir=rtl style=direction: rtl" : "lang=en")>
 <!--begin::Head-->
 <head>
-    <title>@ViewData["Title"] | gms</title>
+    <title>@ViewData["Title"] | FitHub</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="~/assets/media/logos/favicon.ico" />
+    <link rel="shortcut icon" href="~/favicon.ico" />
 
     <!--begin::Fonts(mandatory for all pages)-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -53,8 +53,8 @@
                 <!--begin::Content-->
                 <div class="d-flex flex-column flex-center pb-0 pb-lg-10 p-10 w-100">
                     <!--begin::Image-->
-                    <img class="theme-light-show mx-auto mw-200 w-250px w-lg-400px mb-5" src="~/assets/media/illustrations/sigma-1/17.png" alt="" />
-                    <img class="theme-dark-show mx-auto mw-200 w-250px w-lg-400px mb-5" src="~/assets/media/illustrations/sigma-1/17-dark.png" alt="" />
+                    <img class="theme-light-show mx-auto mw-200 w-250px w-lg-400px mb-5" src="~/assets/Images/laptop_logo_dark.png" alt="" />
+                    <img class="theme-dark-show mx-auto mw-200 w-250px w-lg-400px mb-5" src="~/assets/Images/laptop_logo_light.png" alt="" />
                     <!--end::Image-->
                     <!--begin::Title-->
                     <h1 class="text-gray-800 fs-2qx fw-bold text-center mb-7">Fast, Efficient and Productive</h1>
@@ -83,8 +83,16 @@
                             <div class="app-header-logo d-flex align-self-start pb-10" id="kt_app_header_logo">
                                 <!--begin::Logo-->
                                 <a href="#" class="app-sidebar-logo">
-                                    <img alt="Logo" src="/assets/media/logos/demo39.svg" class="h-25px theme-light-show">
-                                    <img alt="Logo" src="/assets/media/logos/demo39-dark.svg" class="h-25px theme-dark-show">
+                                    @if (!IsRTL)
+                                    {
+                                        <img alt="Logo" src="~/assets/Images/logo_title_dark_ltr.png" class="h-30px h-lg-35px theme-light-show" />
+                                        <img alt="Logo" src="~/assets/Images/logo_title_light_ltr.png" class="h-30px h-lg-35px theme-dark-show" />
+                                    }
+                                    else
+                                    {
+                                        <img alt="Logo" src="~/assets/Images/logo_title_dark_rtl.png" class="h-30px h-lg-35px theme-light-show" />
+                                        <img alt="Logo" src="~/assets/Images/logo_title_light_rtl.png" class="h-30px h-lg-35px theme-dark-show" />
+                                    }
                                 </a>
                                 <!--end::Logo-->
                             </div>
