Last Update Move Roles Dtos

--- a/gms.web/Views/GymUser/GymUserRoles.cshtml
+++ b/gms.web/Views/GymUser/GymUserRoles.cshtml
@@ -1,4 +1,4 @@
-﻿@model GymUserRolesViewModel;
+﻿@model GymUserRolesDTO;
 @{
 	ViewData["Title"] = localizer["staffslist"];
 	bool IsRTL = CultureInfo.CurrentCulture.Name.StartsWith("ar");
