--- a/gms.web/Views/Roles/GymRolePermissionsByRoleId.cshtml
+++ b/gms.web/Views/Roles/GymRolePermissionsByRoleId.cshtml
@@ -1,4 +1,4 @@
-﻿@model GymRolePermissionsViewModel;
+﻿@model GymRolePermissionsDTO;
 @{
 	ViewData["Title"] = localizer["staffslist"];
 	bool IsRTL = CultureInfo.CurrentCulture.Name.StartsWith("ar");
