--- a/gms.web/Views/Roles/_AddRoleForm.cshtml
+++ b/gms.web/Views/Roles/_AddRoleForm.cshtml
@@ -1,4 +1,4 @@
-﻿@model AddRoleViewModel;
+﻿@model CreateGymRoleDTO;
 
 <form asp-action="AddGymRole" asp-controller="Roles" method="post">
     <input type="text" class="form-control" asp-for="RoleName" placeholder="Role name..." />
