--- a/gms.web/Views/_ViewImports.cshtml
+++ b/gms.web/Views/_ViewImports.cshtml
@@ -8,6 +8,8 @@
 @using gms.common.ViewModels;
 @using gms.data.Models;
 @using gms.common.Models.Identity;
+@using gms.common.Models.Role;
+
 
 @using gms.common.Models.ActivityCat.Activity;
 
