Last Updat Finish Group Module

--- a/gms.web/Views/Shared/_Layout.cshtml
+++ b/gms.web/Views/Shared/_Layout.cshtml
@@ -164,6 +164,9 @@
         <i class="ki-outline ki-arrow-up"></i>
     </div>
     <!--end::Scrolltop-->
+    <!--begin::Main Modal-->
+    <partial name="_MainModal" />
+    <!--end::Main Modal-->
     <!--begin::Javascript-->
     <script>var hostUrl = "~/assets/";</script>
     <!--begin::Global Javascript Bundle(mandatory for all pages)-->
@@ -175,7 +178,6 @@
     <script src="~/assets/plugins/custom/datatables/datatables.bundle.js"></script>
     <script src="~/assets/plugins/custom/vis-timeline/vis-timeline.bundle.js"></script>
     <script src="~/assets/plugins/custom/formrepeater/formrepeater.bundle.js"></script>
-
     <script src="~/assets/plugins/custom/fslightbox/fslightbox.bundle.js"></script>
 
     <script src="https://cdn.amcharts.com/lib/5/index.js"></script>
