--- a/gms.web/Views/Shared/_Footer.cshtml
+++ b/gms.web/Views/Shared/_Footer.cshtml
@@ -4,21 +4,21 @@
 		<!--begin::Copyright-->
 		<div class="text-dark order-2 order-md-1">
 			<span class="text-muted fw-semibold me-1">2023&copy;</span>
-			<a href="https://keenthemes.com" target="_blank"
-			   class="text-gray-800 text-hover-primary">Keenthemes</a>
+			<a href="#" target="_blank"
+			   class="text-gray-800 text-hover-primary">FitHub</a>
 		</div>
 		<!--end::Copyright-->
 		<!--begin::Menu-->
 		<ul class="menu menu-gray-600 menu-hover-primary fw-semibold order-1">
 			<li class="menu-item">
-				<a href="https://keenthemes.com" target="_blank" class="menu-link px-2">About</a>
+				<a href="#" target="_blank" class="menu-link px-2">About</a>
 			</li>
 			<li class="menu-item">
-				<a href="https://devs.keenthemes.com" target="_blank"
+				<a href="#" target="_blank"
 				   class="menu-link px-2">Support</a>
 			</li>
 			<li class="menu-item">
-				<a href="https://1.envato.market/EA4JP" target="_blank"
+				<a href="#" target="_blank"
 				   class="menu-link px-2">Purchase</a>
 			</li>
 		</ul>
