--- a/gms.web/Views/Shared/_Sidebar.cshtml
+++ b/gms.web/Views/Shared/_Sidebar.cshtml
@@ -208,47 +208,22 @@
 					<!--end:Menu sub-->
 				</div>
 				<!--end:Menu item-->
-				<!--begin:Menu item-->
-				<div data-kt-menu-trigger="click" class="menu-item menu-accordion">
-					<!--begin:Menu link-->
-					<span class="menu-link">
+				<!--begin::Menu Item-->
+				<div class="menu-item" side-menu-item="true">
+					<!--begin::Menu link-->
+					<a class="menu-link" asp-controller="Gym" asp-action="GroupsList">
+						<!--begin::icone-->
 						<span class="menu-icon">
 							<i class="fa-solid fa-people-group fs-3"></i>
 						</span>
+						<!--begin::icon-->
+						<!--begin::Title-->
 						<span class="menu-title">@localizer["groups"]</span>
-						<span class="menu-arrow"></span>
-					</span>
-					<!--end:Menu link-->
-					<!--begin:Menu sub-->
-					<div class="menu-sub menu-sub-accordion">
-						<!--begin:Menu item-->
-						<div class="menu-item" side-menu-item="true">
-							<!--begin:Menu link-->
-							<a class="menu-link" href="@Url.Action("AddNewGroup", "Gym")">
-								<span class="menu-bullet">
-									<span class="bullet bullet-dot"></span>
-								</span>
-								<span class="menu-title">@localizer["add_new_group"]</span>
-							</a>
-							<!--end:Menu link-->
-						</div>
-						<!--end:Menu item-->
-						<!--begin:Menu item-->
-						<div class="menu-item" side-menu-item="true">
-							<!--begin:Menu link-->
-							<a class="menu-link" href="@Url.Action("GroupsList", "Gym")">
-								<span class="menu-bullet">
-									<span class="bullet bullet-dot"></span>
-								</span>
-								<span class="menu-title">@localizer["groups_list"]</span>
-							</a>
-							<!--end:Menu link-->
-						</div>
-						<!--end:Menu item-->
-					</div>
-					<!--end:Menu sub-->
+						<!--end::Title-->
+					</a>
+					<!--end::Menu link-->
 				</div>
-				<!--end:Menu item-->
+				<!--end::Menu Item-->
 				<!--begin:Menu item-->
 				<div data-kt-menu-trigger="click" class="menu-item menu-accordion">
 					<!--begin:Menu link-->
