--- a/gms.web/Views/Shared/_MainModal.cshtml
+++ b/gms.web/Views/Shared/_MainModal.cshtml
@@ -1,7 +1,7 @@
 ﻿<!--begin::Main Modal-->
 <div class="modal fade" id="main_modal" tabindex="-1" aria-hidden="true">
     <!--begin::Modal dialog-->
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-scrollable">
         <!--begin::Modal content-->
         <div class="modal-content">
             <!--begin::Modal header-->
