--- a/gms.web/Views/Shared/_Sidebar.cshtml
+++ b/gms.web/Views/Shared/_Sidebar.cshtml
@@ -277,6 +277,22 @@
 					<!--end:Menu sub-->
 				</div>
 				<!--end:Menu item-->
+				<!--begin::Menu Item-->
+				<div class="menu-item" side-menu-item="true">
+					<!--begin::Menu link-->
+					<a class="menu-link" asp-controller="Activity" asp-action="Index">
+						<!--begin::icone-->
+						<span class="menu-icon">
+							<i class="fa-solid fa-person-running fs-1"></i>
+						</span>
+						<!--begin::icon-->
+						<!--begin::Title-->
+						<span class="menu-title">@localizer["activities"]</span>
+						<!--end::Title-->
+					</a>
+					<!--end::Menu link-->
+				</div>
+				<!--end::Menu Item-->
 				<!--begin:Menu item-->
 				<div data-kt-menu-trigger="click" class="menu-item menu-accordion">
 					<!--begin:Menu link-->
